adjusting for github image limitation

--- a/photos.html
+++ b/photos.html
@@ -180,112 +180,112 @@ body {background-color:#c7cdd3;
                 </a>
             </div>
             <div class="col-sm-12 col-md-8">
-                <a class="lightbox" href="img/20.JPG">
-                    <img src="img/20.JPG" alt="">
+                <a class="lightbox" href="20.JPG">
+                    <img src="20.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="img/21.JPG">
-                    <img src="img/21.JPG" alt="">
+                <a class="lightbox" href="21.JPG">
+                    <img src="21.JPG" alt="">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="img/22.JPG">
-                    <img src="img/22.JPG" alt="">
+                <a class="lightbox" href="22.JPG">
+                    <img src="22.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-12 col-md-8">
-                <a class="lightbox" href="img/23.JPG">
-                    <img src="img/23.JPG" alt="">
+                <a class="lightbox" href="23.JPG">
+                    <img src="23.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="img/24.JPG">
-                    <img src="img/24.JPG" alt="">
+                <a class="lightbox" href="24.JPG">
+                    <img src="24.JPG" alt="">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="img/25.JPG">
-                    <img src="img/25.JPG" alt="">
+                <a class="lightbox" href="25.JPG">
+                    <img src="25.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-12 col-md-8">
-                <a class="lightbox" href="img/26.JPG">
-                    <img src="img/26.JPG" alt="">
+                <a class="lightbox" href="26.JPG">
+                    <img src="26.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="img/27.JPG">
-                    <img src="img/27.JPG" alt="">
+                <a class="lightbox" href="27.JPG">
+                    <img src="27.JPG" alt="">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="img/28.JPG">
-                    <img src="img/28.JPG" alt="">
+                <a class="lightbox" href="28.JPG">
+                    <img src="28.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-12 col-md-8">
-                <a class="lightbox" href="img/29.JPG">
-                    <img src="img/29.JPG" alt="">
+                <a class="lightbox" href="29.JPG">
+                    <img src="29.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="img/30.JPG">
-                    <img src="img/31.JPG" alt="">
+                <a class="lightbox" href="30.JPG">
+                    <img src="31.JPG" alt="">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="img/32.JPG">
-                    <img src="img/32.JPG" alt="">
+                <a class="lightbox" href="32.JPG">
+                    <img src="32.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-12 col-md-8">
-                <a class="lightbox" href="img/33.JPG">
-                    <img src="img/33.JPG" alt="">
+                <a class="lightbox" href="33.JPG">
+                    <img src="33.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="img/34.JPG">
-                    <img src="img/34.JPG" alt="">
+                <a class="lightbox" href="34.JPG">
+                    <img src="34.JPG" alt="">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="img/35.JPG">
-                    <img src="img/35.JPG" alt="">
+                <a class="lightbox" href="35.JPG">
+                    <img src="35.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-12 col-md-8">
-                <a class="lightbox" href="img/36.JPG">
-                    <img src="img/36.JPG" alt="">
+                <a class="lightbox" href="36.JPG">
+                    <img src="36.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="img/37.JPG">
-                    <img src="img/37.JPG" alt="">
+                <a class="lightbox" href="37.JPG">
+                    <img src="37.JPG" alt="">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="img/38.JPG">
-                    <img src="img/38.JPG" alt="">
+                <a class="lightbox" href="38.JPG">
+                    <img src="38.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-12 col-md-8">
-                <a class="lightbox" href="img/39.JPG">
-                    <img src="img/39.JPG" alt="">
+                <a class="lightbox" href="39.JPG">
+                    <img src="39.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="img/40.JPG">
-                    <img src="img/40.JPG" alt="">
+                <a class="lightbox" href="40.JPG">
+                    <img src="40.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="img/41.JPG">
-                    <img src="img/41.JPG" alt="">
+                <a class="lightbox" href="41.JPG">
+                    <img src="41.JPG" alt="">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="img/42.JPG">
+                <a class="lightbox" href="42.JPG">
                     <img src="42.JPG" alt="">
                 </a>
             </div> 
