--- a/photos.html
+++ b/photos.html
@@ -285,28 +285,28 @@ body {background-color:#c7cdd3;
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="42.JPG">
-                    <img src="42.JPG" alt="">
+                <a class="lightbox" href="42.jpg">
+                    <img src="42.jpg" alt="">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="43.PNG">
-                    <img src="43.PNG" alt="">
+                <a class="lightbox" href="43.jpg">
+                    <img src="43.jpg" alt="">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="44.PNG">
-                    <img src="44.PNG" alt="">
+                <a class="lightbox" href="44.png">
+                    <img src="44.png" alt="">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="45.PNG">
-                    <img src="45.PNG" alt="">
+                <a class="lightbox" href="45.png">
+                    <img src="45.png" alt="">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="46.PNG">
-                    <img src="46.PNG" alt="">
+                <a class="lightbox" href="46.png">
+                    <img src="46.png" alt="">
                 </a>
             </div> 
             
