--- a/photos.html
+++ b/photos.html
@@ -290,8 +290,8 @@ body {background-color:#c7cdd3;
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="43.jpg">
-                    <img src="43.jpg" alt="">
+                <a class="lightbox" href="43.png">
+                    <img src="43.png" alt="">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
