--- a/photos.html
+++ b/photos.html
@@ -280,8 +280,8 @@ body {background-color:#c7cdd3;
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="41.JPG">
-                    <img src="41.JPG" alt="">
+                <a class="lightbox" href="41.jpg">
+                    <img src="41.jpg" alt="">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
