--- a/photos.html
+++ b/photos.html
@@ -90,18 +90,18 @@ body {background-color:#c7cdd3;
 
         <div class="row">
             <div class="col-sm-12 col-md-4">
-                <a class="lightbox" href="2.JPG">
-                    <img src="2.JPG" alt="">
+                <a class="lightbox" href="img/2.JPG">
+                    <img src="img/2.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="3.JPG">
-                    <img src="3.JPG" alt="">
+                <a class="lightbox" href="img/3.JPG">
+                    <img src="img/3.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="4.JPG">
-                    <img src="4.JPG" alt="">
+                <a class="lightbox" href="img/4.JPG">
+                    <img src="img/4.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-12 col-md-8">
