--- a/photos.html
+++ b/photos.html
@@ -75,15 +75,15 @@ body {background-color:#c7cdd3;
   }
 </style>
 
-    <h1><font color="#ffffff">Gallery</font></h1>
+    <h1><font color="#c7cdd3">Gallery</font></h1>
 
-    <p class="page-description text-center"><h3><font color="ffffff">The following moments were captured from a 10' x 12' garden
+    <p class="page-description text-center"><h3><font color="#c7cdd3">The following moments were captured from a 10' x 12' garden
         box growing ten flowering heirloom collards. These collards fed thousands of
         bees.</font></h3>
     </p>
-    <p class="page-description text-center"><h3><font color="#ffffff">Will you join us? Help us feed bees high-quality pollen and nectar.
-    Start your garden box today. Help bees by growing heirloom seeds and make the world a better place.</h3></font><br>
-    <p><font color="#ffffff">Click the first photo below to start the photo album.</font></p>
+    <p class="page-description text-center"><h4><font color="#c7cdd3">Will you join us? Help us feed bees high-quality pollen and nectar.
+    Start your garden box today. Help bees by growing heirloom seeds and make the world a better place.</h4></font><br>
+    <p><font color="#c7cdd3">Click the first photo below to start the photo album.</font></p>
   
     
     <div class="tz-gallery">
