--- a/photos.html
+++ b/photos.html
@@ -105,208 +105,208 @@ body {background-color:#c7cdd3;
                 </a>
             </div>
             <div class="col-sm-12 col-md-8">
-                <a class="lightbox" href="5.JPG">
-                    <img src="5.JPG" alt="">
+                <a class="lightbox" href="img/5.JPG">
+                    <img src="img/5.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
-                    <a class="lightbox" href="6.JPG">
-                <img src="6.JPG" alt="">
+                    <a class="lightbox" href="img/6.JPG">
+                <img src="img/6.JPG" alt="">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="7.JPG">
-                    <img src="7.JPG" alt="">
+                <a class="lightbox" href="img/7.JPG">
+                    <img src="img/7.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-12 col-md-8">
-                <a class="lightbox" href="8.JPG">
-                    <img src="8.JPG" alt="">
+                <a class="lightbox" href="img/8.JPG">
+                    <img src="img/8.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="9.JPG">
-                    <img src="9.JPG" alt="">
+                <a class="lightbox" href="img/9.JPG">
+                    <img src="img/9.JPG" alt="">
                  </a>
             </div> 
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="10.JPG">
-                    <img src="10.JPG" alt="">
+                <a class="lightbox" href="img/10.JPG">
+                    <img src="img/10.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-12 col-md-8">
-                <a class="lightbox" href="11.JPG">
-                    <img src="11.JPG" alt="">
+                <a class="lightbox" href="img/11.JPG">
+                    <img src="img/11.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="12.JPG">
-                    <img src="12.JPG" alt="">
+                <a class="lightbox" href="img/12.JPG">
+                    <img src="img/12.JPG" alt="">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="13.JPG">
-                    <img src="13.JPG" alt="">
+                <a class="lightbox" href="img/13.JPG">
+                    <img src="img/13.JPG" alt="">
                     </a>
             </div>
             <div class="col-sm-12 col-md-8">
-                <a class="lightbox" href="14.JPG">
-                    <img src="14.JPG" alt="">
+                <a class="lightbox" href="img/14.JPG">
+                    <img src="img/14.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="15.JPG">
-                    <img src="15.JPG" alt="">
+                <a class="lightbox" href="img/15.JPG">
+                    <img src="img/15.JPG" alt="">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="16.JPG">
-                    <img src="16.JPG" alt="">
+                <a class="lightbox" href="img/16.JPG">
+                    <img src="img/16.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-12 col-md-8">
-                <a class="lightbox" href="17.JPG">
-                    <img src="17.JPG" alt="">
+                <a class="lightbox" href="img/17.JPG">
+                    <img src="img/17.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="18.JPG">
-                    <img src="18.JPG" alt="">
+                <a class="lightbox" href="img/18.JPG">
+                    <img src="img/18.JPG" alt="">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="19.JPG">
-                    <img src="19.JPG" alt="">
+                <a class="lightbox" href="img/19.JPG">
+                    <img src="img/19.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-12 col-md-8">
-                <a class="lightbox" href="20.JPG">
-                    <img src="20.JPG" alt="">
+                <a class="lightbox" href="img/20.JPG">
+                    <img src="img/20.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="21.JPG">
-                    <img src="21.JPG" alt="">
+                <a class="lightbox" href="img/21.JPG">
+                    <img src="img/21.JPG" alt="">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="22.JPG">
-                    <img src="22.JPG" alt="">
+                <a class="lightbox" href="img/22.JPG">
+                    <img src="img/22.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-12 col-md-8">
-                <a class="lightbox" href="23.JPG">
-                    <img src="23.JPG" alt="">
+                <a class="lightbox" href="img/23.JPG">
+                    <img src="img/23.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="24.JPG">
-                    <img src="24.JPG" alt="">
+                <a class="lightbox" href="img/24.JPG">
+                    <img src="img/24.JPG" alt="">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="25.JPG">
-                    <img src="25.JPG" alt="">
+                <a class="lightbox" href="img/25.JPG">
+                    <img src="img/25.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-12 col-md-8">
-                <a class="lightbox" href="26.JPG">
-                    <img src="26.JPG" alt="">
+                <a class="lightbox" href="img/26.JPG">
+                    <img src="img/26.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="27.JPG">
-                    <img src="27.JPG" alt="">
+                <a class="lightbox" href="img/27.JPG">
+                    <img src="img/27.JPG" alt="">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="28.JPG">
-                    <img src="28.JPG" alt="">
+                <a class="lightbox" href="img/28.JPG">
+                    <img src="img/28.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-12 col-md-8">
-                <a class="lightbox" href="29.JPG">
-                    <img src="29.JPG" alt="">
+                <a class="lightbox" href="img/29.JPG">
+                    <img src="img/29.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="30.JPG">
-                    <img src="31.JPG" alt="">
+                <a class="lightbox" href="img/30.JPG">
+                    <img src="img/31.JPG" alt="">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="32.JPG">
-                    <img src="32.JPG" alt="">
-                </a>
-            </div>
-            <div class="col-sm-12 col-md-8">
-                <a class="lightbox" href="33.JPG">
-                    <img src="33.JPG" alt="">
-                </a>
-            </div>
-            <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="34.JPG">
-                    <img src="34.JPG" alt="">
-                </a>
-            </div> 
-            <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="35.JPG">
-                    <img src="35.JPG" alt="">
+                <a class="lightbox" href="img/32.JPG">
+                    <img src="img/32.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-12 col-md-8">
-                <a class="lightbox" href="36.JPG">
-                    <img src="36.JPG" alt="">
+                <a class="lightbox" href="img/33.JPG">
+                    <img src="img/33.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="37.JPG">
-                    <img src="37.JPG" alt="">
+                <a class="lightbox" href="img/34.JPG">
+                    <img src="img/34.JPG" alt="">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="38.JPG">
-                    <img src="38.JPG" alt="">
-                </a>
-            </div>
-            <div class="col-sm-12 col-md-8">
-                <a class="lightbox" href="39.JPG">
-                    <img src="39.JPG" alt="">
-                </a>
-            </div>
-            <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="40.JPG">
-                    <img src="40.JPG" alt="">
+                <a class="lightbox" href="img/35.JPG">
+                    <img src="img/35.JPG" alt="">
                 </a>
             </div>
             <div class="col-sm-12 col-md-8">
-                <a class="lightbox" href="41.jpg">
-                    <img src="41.jpg" alt="">
+                <a class="lightbox" href="img/36.JPG">
+                    <img src="img/36.JPG" alt="">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="img/37.JPG">
+                    <img src="img/37.JPG" alt="">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="42.jpg">
-                    <img src="42.jpg" alt="">
+                <a class="lightbox" href="img/38.JPG">
+                    <img src="img/38.JPG" alt="">
+                </a>
+            </div>
+            <div class="col-sm-12 col-md-8">
+                <a class="lightbox" href="img/39.JPG">
+                    <img src="img/39.JPG" alt="">
+                </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="img/40.JPG">
+                    <img src="img/40.JPG" alt="">
+                </a>
+            </div>
+            <div class="col-sm-12 col-md-8">
+                <a class="lightbox" href="img/41.jpg">
+                    <img src="img/41.jpg" alt="">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="43.png">
-                    <img src="43.png" alt="">
+                <a class="lightbox" href="img/42.jpg">
+                    <img src="img/42.jpg" alt="">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="44.png">
-                    <img src="44.png" alt="">
+                <a class="lightbox" href="img/43.png">
+                    <img src="img/43.png" alt="">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="45.png">
-                    <img src="45.png" alt="">
+                <a class="lightbox" href="img/44.png">
+                    <img src="img/44.png" alt="">
                 </a>
             </div> 
             <div class="col-sm-6 col-md-4">
-                <a class="lightbox" href="46.png">
-                    <img src="46.png" alt="">
+                <a class="lightbox" href="img/45.png">
+                    <img src="img/45.png" alt="">
+                </a>
+            </div> 
+            <div class="col-sm-6 col-md-4">
+                <a class="lightbox" href="img/46.png">
+                    <img src="img/46.png" alt="">
                 </a>
             </div> 
             
