--- a/photos.html
+++ b/photos.html
@@ -78,7 +78,7 @@ body {background-color:#c7cdd3;
     <h1><font color="#c7cdd3">Gallery</font></h1>
 
     <p class="page-description text-center"><h3><font color="#c7cdd3">The following moments were captured from a 10' x 12' garden
-        box growing ten flowering heirloom collards. These collards fed thousands of
+        box growing ten flowering heirloom collard plants. These collards fed thousands of
         bees.</font></h3>
     </p>
     <p class="page-description text-center"><h4><font color="#c7cdd3">Will you join us? Help us feed bees high-quality pollen and nectar.
