--- a/hybridheirloom.html
+++ b/hybridheirloom.html
@@ -119,7 +119,7 @@ body {background-color:#c7cdd3;
       </div>
       
                    
-        <a href="http://www.whatsonmyfood.org"><img src="What.JPG" class="img-fluid" alt="Find out what's on your food at: whatsonmyfood.org"></a>
+        <a href="http://www.whatsonmyfood.org"><img src="img/What.JPG" class="img-fluid" alt="Find out what's on your food at: whatsonmyfood.org"></a>
         <div class="animated pulse infinite"><strong>"You can't connect the dots looking forward, you can only connect the them looking
           backward"&#8212;Steve Jobs</strong>
         </div>
