pull url, not live

--- a/hybridheirloom.html
+++ b/hybridheirloom.html
@@ -136,7 +136,7 @@ body {background-color:#c7cdd3;
     <div class="container">
       <p class="footer-block">
          2018 © 
-              <a href="https://savebeesgrowheirloomseeds.com/" target="_blank">savebeesgrowheirloomseeds.com</a> 
+             <!-- <a href="https://savebeesgrowheirloomseeds.com/" target="_blank">savebeesgrowheirloomseeds.com</a>--> 
                
               | <a href="https://www.instagram.com/savebeesgrowheirloomseeds/" target="_blank">#savebeesgrowheirloomseeds</a>
               <br> Images by <a href="http://www.instagram.com/_CynthiaLondon_" target="_blank">#_cynthialondon_</a> &hearts;</p>
