--- a/photos.html
+++ b/photos.html
@@ -75,7 +75,7 @@ body {background-color:#c7cdd3;
   }
 </style>
 
-    <h1><font color="#c7cdd3">Gallery</font></h1>
+    <p class="title"><font color="#c7cdd3">Gallery</p></h1>
 
     <p class="page-description text-center"><h3><font color="#c7cdd3">The following moments were captured from a 10' x 12' garden
         box growing ten flowering heirloom collard plants. These collards fed thousands of
