--- a/photos.html
+++ b/photos.html
@@ -9,7 +9,8 @@
     <title>Save Bees Grow Heirloom Seeds</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Anton+Sans:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Gamja+Flower" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.css">
     <link rel="stylesheet" href="css/fluid-gallery.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -21,8 +22,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <!--Fontawesome-->
  
-    <!--Google font-->
-    <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/robotech-gp" type="text/css" />
+   
+    
    
 </head>
 
@@ -77,7 +78,7 @@ body {background-color:#c7cdd3;
 
     <p class="title"><font color="#c7cdd3">Gallery</p></h1>
 
-        <h4><strong>"Never doubt that a small group of thoughtful, committed citizens can change the world; indeed, it's the only thing that ever has."<br> - Margaret Mead</h4></strong>
+       <div class="quote" align="center"><strong>"Never doubt that a small group of thoughtful, committed citizens can change the world; indeed, it's the only thing that ever has."<br> - Margaret Mead</div>
 
     <p class="page-description text-center"><h4><font color="#c7cdd3">The following moments were captured from a 10' x 12' garden
         box growing ten flowering heirloom collard plants. These collards fed thousands of
