--- a/feedthousandsofbees.html
+++ b/feedthousandsofbees.html
@@ -70,7 +70,7 @@ body {background-color:#c7cdd3;
         <p>When they hear about the plight of bees, many people want to help, but they aren't sure
             what to do. 
             Helping bees,
-            and pollinators, is easy. If you have a <br><strong>10' x 12'</strong> mostly sunny spot in your backyard, you 
+            and pollinators, is easy. If you have a <br><strong>12' x 12'</strong> mostly sunny spot in your backyard, you 
             can start a kitchen garden and grow heirloom seeds. 
             <img src="img/box1.JPG" class="img-fluid" alt="Responsive image">
             
@@ -89,13 +89,13 @@ body {background-color:#c7cdd3;
            discover that while the collards were blooming, we fed thousands of bees a week, plus many butterflies and other
            insects.
        </p></div>
-      <div><h2>Installing a 10' x 12' Garden Box</h2></div>
+      <div><h2>Installing a 12' x 12' Garden Box</h2></div>
       <img src="img/box2.JPG" class="img-fluid" alt="Responsive image">
             <p>Installing a 10' x 12' garden box doesn't take a lot of time. You don't even have to put 
             lot of effort into it. You can throw down newspapers or landscaping fabric, and cover with only
             an inch or two of soil, like Save Bees Grow Heirloom Seeds did to start their box.</p>
             <h3>To install a garden box, complete the following steps:</h3>
-            <ol><li>Get four 10' x 12' boards. Decide whether to paint them to protect them from moisture.</li>
+            <ol><li>Get four 12' x 12' (2" x 10") boards. Decide whether to paint them to protect them from moisture.</li>
                 <li>Get four corner brackets and enough screws to install the corner brackets. Using a hand-held power drill,
                     install the four corner brackets into the boards, and form a square out of the boards.
                 <li>Prepare the soil, either by digging it up, by putting down newspapers, or by putting down
@@ -129,9 +129,9 @@ body {background-color:#c7cdd3;
         needs from a kitchen garden, you can supplement your diet as much as you can with the 
     very best nurition available.</p></div>
         
-         <div><p>Having a 10' x 12' kitchen garden is like a having a private tidepool, or acquarium, 
+         <div><p>Having a 12' x 12' kitchen garden is like a having a private tidepool, or acquarium, 
              in your backyard. You will be amazed at the amount of 
-                  wildlife your 10' x 12' box supports. Our 10' x 12' garden box hosted aphids, 
+                  wildlife your 12' x 12' box supports. Our 12' x 12' garden box hosted aphids, 
                   ladybugs,
                   beatles, bees, snakes, and butterflies, to name a few. Standing near your box
                    when it is buzzing with bees, knowing you created that happy and healthy buzzing,
