--- a/feedthousandsofbees.html
+++ b/feedthousandsofbees.html
@@ -95,7 +95,7 @@ body {background-color:#c7cdd3;
             lot of effort into it. You can throw down newspapers or landscaping fabric, and cover with only
             an inch or two of soil, like Save Bees Grow Heirloom Seeds did to start their box.</p>
             <h3>To install a garden box, complete the following steps:</h3>
-            <ol><li>Get four 12' x 12' (2" x 10") boards. Decide whether to paint them to protect them from moisture.</li>
+            <ol><li>Get four 12' L x 2" W x 10" H boards. Decide whether to paint them to protect them from moisture.</li>
                 <li>Get four corner brackets and enough screws to install the corner brackets. Using a hand-held power drill,
                     install the four corner brackets into the boards, and form a square out of the boards.
                 <li>Prepare the soil, either by digging it up, by putting down newspapers, or by putting down
