--- a/feedthousandsofbees.html
+++ b/feedthousandsofbees.html
@@ -89,7 +89,7 @@ body {background-color:#c7cdd3;
            discover that while the collards were blooming, we fed thousands of bees a week, plus many butterflies and other
            insects.
        </p></div>
-      <div><h2>Installing a 12' x 12' Garden Box</h2></div>
+      <div><h2>Installing a Garden Box</h2></div>
       <img src="img/box2.JPG" class="img-fluid" alt="Responsive image">
             <p>Installing a 12' x 12' garden box doesn't take a lot of time. You don't even have to put 
             lot of effort into it. You can throw down newspapers or landscaping fabric, and cover with only
@@ -129,9 +129,9 @@ body {background-color:#c7cdd3;
         needs from a kitchen garden, you can supplement your diet as much as you can with the 
     very best nurition available.</p></div>
         
-         <div><p>Having a 12' x 12' kitchen garden is like a having a private tidepool, or acquarium, 
+         <div><p>Having a kitchen garden is like a having a private tidepool, or acquarium, 
              in your backyard. You will be amazed at the amount of 
-                  wildlife your 12' x 12' box supports. Our 12' x 12' garden box hosted aphids, 
+                  wildlife your garden box supports. Our garden box hosted aphids, 
                   ladybugs,
                   beatles, bees, snakes, and butterflies, to name a few. Standing near your box
                    when it is buzzing with bees, knowing you created that happy and healthy buzzing,
