restore style sheet

--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
                     </header>
                     <section>
                         <p class="slideInUp slideInUp2">
-                        <text-align: left>Since 1902, the number of bee colonies per hectare have decreased 
+                        Since 1902, the number of bee colonies per hectare have decreased 
                                         90%.<br>
                                     
                         In 1976, there were 76 million bees hives.
                         In 2008, the total number of bees dropped 60% to 24 million hives.
                         <br>As of 2018, 30% of bees have disappeared and 1/4 of the World's 250 bees species are facing extinction.
-                    </align></p>
+                    </p>
                         <iframe width="560" height="315" src="https://www.youtube.com/embed/7X1xIIyZw3M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                     </section>
                 </div> <!-- .wrapper -->
@@ -135,7 +135,7 @@
 
         <div class="footer-container">
             <footer class="wrapper">
-                <h6>2018 &copy; <a href="https://savebeesgrowheirloomseeds.com" target="_blank">savebeesgrowheirloomseeds.com</a> 
+                <h6>2018 &copy; <!--<a href="https://savebeesgrowheirloomseeds.com" target="_blank">savebeesgrowheirloomseeds.com</a>-->
                     | <a href="https://twitter.com/savebeesgrowheirloomseeds" target="_blank">@savebeesgrowheirloomseeds</a> 
                     | <a href="https://www.instagram.com/savebeesgrowheirloomseeds/" target="_blank">#savebeesgrowheirloomseeds</a>
                     <br> Images by <a href="http://www.instagram.com/_CynthiaLondon_" target="_blank">#_cynthialondon_ </a> &hearts;
@@ -143,6 +143,9 @@
                     
             </footer>
         </div>
+    </div>
+</div>
+</div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
