--- a/feedthousandsofbees.html
+++ b/feedthousandsofbees.html
@@ -159,8 +159,8 @@ body {background-color:#c7cdd3;
 
               <img src="img/plant3.JPG" class="img-fluid" alt="Responsive image">
               </div>
-              <p><i class="fas fa-play"></i></span><A href="photos.html">
-                Gallery</A></p>
+              <p><span><i class="fas fa-play"></i></span><a href="photos.html" font color="ffffff">
+                Gallery</a></p>
               
         </div>
     </div>
