--- a/hybridheirloom.html
+++ b/hybridheirloom.html
@@ -89,7 +89,7 @@ body {background-color:#c7cdd3;
             grow the same year over year, allowing growers to save their seeds for reuse.
            </div>
 
-        <div><h3>The Great Seed Extinction of the 20th Century</h3></div>
+        <div><h3>The 20th Century Great Seed Extinction</h3></div>
         <div><p>If you were alive in 1903, you would have been able to choose from more than 
           500 varieties of cabbage, 
           400 varieties of peas and tomatoes, 
