--- a/hybridheirloom.html
+++ b/hybridheirloom.html
@@ -109,7 +109,7 @@ body {background-color:#c7cdd3;
               <div>There is a growing movement to grow heirloom seeds and supply them to gardners for their
                 use, to try to rebuild and perserve biodiversity. The average age of a seed saver is 70 years old. We need
                 more seed savers. With a garden box, you can focus on a seed to save. Seed savers work with
-                online heirloom seed companies.
+                heirloom seed companies and grow seed to supply to others.
               </div>
              
       <div><h2>What's On Our Food</h2></div>
